--- a/xnet/index.html
+++ b/xnet/index.html
@@ -120,7 +120,7 @@
             <a href="#"><img src="img/features3.svg" alt=""></a>
             <div class="info">
               <h3>Easy payment</h3>
-              <p>Just click 'pay', enter your card info, then click 'ok'</p>
+              <p>Just click 'pay', enter your card info, then click 'confirm'</p>
             </div>
           </div>
         </div>
