--- a/xnet/pages/payment.html
+++ b/xnet/pages/payment.html
@@ -1,23 +1,14 @@
 <div class="container">
-  <div id="liqpay_checkout"></div>
-  <script>
-    window.LiqPayCheckoutCallback = function() {
-      LiqPayCheckout.init({
-        data:"eyAidmVyc2lvbiIgOiAzLCAicHVibGljX2tleSIgOiAieW91cl9wdWJsaWNfa2V5IiwgImFjdGlv" +
-             "biIgOiAicGF5IiwgImFtb3VudCIgOiAxLCAiY3VycmVuY3kiIDogIlVTRCIsICJkZXNjcmlwdGlv" +
-             "biIgOiAiZGVzY3JpcHRpb24gdGV4dCIsICJvcmRlcl9pZCIgOiAib3JkZXJfaWRfMSIgfQ==",
-        signature: "QvJD5u9Fg55PCx/Hdz6lzWtYwcI=",
-        embedTo: "#liqpay_checkout",
-        mode: "embed" // embed || popup,
-         }).on("liqpay.callback", function(data){
-  			console.log(data.status);
-  			console.log(data);
-  			}).on("liqpay.ready", function(data){
-  				// ready
-  			}).on("liqpay.close", function(data){
-  				// close
-  		});
-    };
-  </script>
-  <script src="//static.liqpay.ua/libjs/checkout.js" async></script>
+  <h1>Just click 'pay', enter your card info, then click 'confirm'</h1>
+  <form method="POST" accept-charset="utf-8" action="https://www.liqpay.ua/api/3/checkout">
+  	<input type="hidden" name="data" value="eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJwdWJsaWNfa2V5IjoiaTk4NzQ3NTE3MzEyIiwiYW1vdW50IjoiNSIsImN1cnJlbmN5IjoiVUFIIiwiZGVzY3JpcHRpb24iOiLQnNC+0Lkg0YLQvtCy0LDRgCIsInR5cGUiOiJidXkiLCJsYW5ndWFnZSI6InJ1In0=" />
+  	<input type="hidden" name="signature" value="xy3uMLrLNZCDVzOdrnRsKLK0xjE=" />
+  	<button style="border: none !important; display:inline-block !important;text-align: center !important;padding: 7px 20px !important;
+  		color: #fff !important; font-size:16px !important; font-weight: 600 !important; font-family:OpenSans, sans-serif; cursor: pointer !important; border-radius: 2px !important;
+  		background: rgb(122,183,43) !important;"onmouseover="this.style.opacity='0.5';" onmouseout="this.style.opacity='1';">
+  		<img src="https://static.liqpay.ua/buttons/logo-small.png" name="btn_text"
+  			style="margin-right: 7px !important; vertical-align: middle !important;"/>
+  		<span style="vertical-align:middle; !important">Pay</span>
+  	</button>
+  </form>
 </div>
