--- a/xnet/index.html
+++ b/xnet/index.html
@@ -13,7 +13,30 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-i18n/1.6.6/angular-locale_uk-ua.js"></script>
 </head>
-<body ng-app="myApp" ng-controller="myCtrl">
+<body ng-app="myApp" ng-controller="myCtrl" ng-init="logged = false">
+
+<div class="modal fade" id="myModal">
+  <div class="container">
+    <div class="col-md-4 col-md-offset-4 login-form text-center">
+      <button type="button" class="close" data-dismiss="modal">&times;</button>
+      <h5><span ng-hide="logged">Login</span></h5>
+      <h4>{{message}}<h4>
+      <form ng-submit="processForm()" ng-hide="logged">
+        <div class="input-group">
+        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+        <input class="form-control" placeholder="Username" name="username" ng-model="formData.username" type="text" required />
+        </div>
+        <div class="input-group">
+        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+        <input class="form-control" placeholder="Password" name="password" ng-model="formData.password" type="Password" required />
+        </div>
+        <button class="btn btn-success btn-block" type="submit">
+          <i class="glyphicon glyphicon-send"></i>   Login
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
@@ -45,7 +68,13 @@
         <li class="phone hidden-xs" style="display:none" ng-repeat="x in myJSON.phones">
           <a href="tel:{{x.number}}">{{x.short}}</a>
         </li>
-        <li><a href="#"><span class="glyphicon glyphicon-user"> Login</a></li>
+        <li>
+          <a href="#" data-toggle="modal" data-target="#myModal">
+            <span class="glyphicon glyphicon-user">
+            <span ng-hide="logged">Login</span>
+            <span ng-show="logged">{{"Hello, " + formData.username + "!"}}</span>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
@@ -95,7 +124,7 @@
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-body">
-            <a href="#"><img src="img/features1.svg" alt=""></a>
+            <img src="img/features1.svg" alt="">
             <div class="info">
               <h3>24/7 online help</h3>
               <p>24/7 online help by phone,ICQ, Skype</p>
@@ -106,7 +135,7 @@
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-body">
-            <a href="#"><img src="img/features2.svg" alt=""></a>
+            <img src="img/features2.svg" alt="">
             <div class="info">
               <h3>Best speed</h3>
               <p>Access to any website with maximum speed</p>
@@ -117,7 +146,7 @@
       <div class="col-md-4">
         <div class="panel panel-default">
           <div class="panel-body">
-            <a href="#"><img src="img/features3.svg" alt=""></a>
+            <img src="img/features3.svg" alt="">
             <div class="info">
               <h3>Easy payment</h3>
               <p>Just click 'pay', enter your card info, then click 'confirm'</p>
@@ -163,10 +192,19 @@
 
   var app = angular.module("myApp", ['ngRoute']);
   app.controller("myCtrl",function ($scope,$http) {
+
     $http.get("data.json").then(function(response) {
         $scope.myJSON = response.data;
     });
+
+    $scope.formData = {};
+    $scope.processForm = function () {
+      $scope.message = "Hello " + $scope.formData.username + "!";
+      $scope.logged = true;
+    };
+
   });
+
   app.config(function($routeProvider) {
     $routeProvider
     .when("/", {
